# ChangeLog for app-misc/slmon
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/slmon/ChangeLog,v 1.6 2005/01/01 15:23:50 eradicator Exp $

  08 Oct 2003; Joel Hill <hillster@gentoo.org> slmon-0.5.12.ebuild:
  cleanup, marking stable

*slmon-0.5.12 (08 Dec 2002)

123456789-123456789-123456789-123456789-123456789-123456789-123456789-123456789-
  08 Dec 2003; Maik Schreiber <blizzy@gentoo.org> : Initial import (bug #13056).
  Thanks to CJ Kucera <pez@apocalyptech.com>.