@@ -1,3 +1,4 @@
-MD5 3665257243542cee1ea70ddc53830838 ChangeLog 537
-MD5 c27fb3710c607f25edaf45bb2283e953 slmon-0.5.12.ebuild 580
-MD5 1a43f93d090b509281370734c7f57593 files/digest-slmon-0.5.12 63
+MD5 ff22af4b9ed32fbddfa94c5faee23922 slmon-0.5.13.ebuild 701
+MD5 95eae355014e5b14da6eec8a8b106924 ChangeLog 757
+MD5 d4c8b46f106b5227d676a585a0f84063 metadata.xml 255
+MD5 54d56e80b098776b05d7eb40282e7f90 files/digest-slmon-0.5.13 64
