@@ -1,0 +1,25 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/slmon/slmon-0.5.13.ebuild,v 1.1 2005/02/11 11:08:10 ka0ttic Exp $
+
+DESCRIPTION="Colored text-based system performance monitor"
+HOMEPAGE="http://slmon.sourceforge.net/"
+SRC_URI="http://slmon.sourceforge.net/download/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="x86"
+IUSE="debug"
+
+RDEPEND="sys-libs/slang
+	gnome-base/libgtop"
+
+src_compile() {
+	econf $(use_enable debug) || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc AUTHORS ChangeLog INSTALL README TODO
+}
