@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/slmon
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/slmon/ChangeLog,v 1.6 2005/01/01 15:23:50 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/slmon/ChangeLog,v 1.7 2005/02/11 11:08:10 ka0ttic Exp $
+
+*slmon-0.5.13 (11 Feb 2005)
+
+  11 Feb 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
+  -slmon-0.5.12.ebuild, +slmon-0.5.13.ebuild:
+  Version bump; keeping stable on x86 since previous stable version was broken.
 
   08 Oct 2003; Joel Hill <hillster@gentoo.org> slmon-0.5.12.ebuild:
   cleanup, marking stable
